--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="page_header floating_element">
         <img src="/icons/openlogo-75.png" alt="Debian Logo" class="floating_element"/>
         <span class="floating_element">
-          Apache3 Debian Default Page
+          apache page
         </span>
       </div>
 <!--      <div class="table_of_contents floating_element">
